res/examples/invalid/call_noncallable_range_using_variable.eg
let r = 0..1;

r();

// out: TypeError: range is not callable